# bluebubbles-app

./: .gitignore  pubspec.yaml
.github/workflows/: main.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  ffi.dart  main.dart  objectbox-model.json  objectbox.g.dart
lib/app/layouts/chat_creator/: chat_creator.dart
lib/app/layouts/findmy/: findmy_page.dart
lib/app/layouts/settings/: settings_page.dart
lib/app/layouts/setup/: setup_view.dart
lib/helpers/network/: network_tasks.dart
lib/models/global/: attributed_body.dart  settings.dart
lib/models/html/: chat.dart
lib/models/io/: attachment.dart  chat.dart  handle.dart  message.dart
lib/services/backend/: action_handler.dart
lib/services/backend/java_dart_interop/: background_isolate.dart  (+1 more)
lib/services/network/: backend_service.dart  downloads_service.dart  http_service.dart  socket_service.dart
lib/services/rustpush/: rustpush_service.dart  rustpush_socket_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt  rust.cmake
linux/flutter/: generated_plugins.cmake
native-lib/: Cargo.toml  gen-bindings.sh
native-lib/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
rust/: Cargo.toml  genffi.sh
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  native.rs
rust/src/api/: api.rs
windows/flutter/: generated_plugins.cmake
(+46 files in other folders)
